--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "milooz-datatable",
   "private": false,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Un plugin de tableau de données pour React",
   "keywords": ["react", "datatable", "plugin"],
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist","src/datas/mock.json"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
