--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "milooz-datatable",
   "private": false,
-  "version": "0.1.1",
-  "description": "Un plugin de tableau de données pour React",
-  "keywords": ["react", "datatable", "plugin"],
-  "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "files": [
-    "dist","src/datas/mock.json"
+  "version": "0.1.2",
+  "description": "Un plugin d'affichage de tableau de données pour React",
+  "keywords": [
+    "react",
+    "typescript",
+    "component",
+    "ui",
+    "datatable",
+    "newbie"
   ],
+  "license": "MIT",
+  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "files": [
+    "dist",
+    "src/datas/mock.json"
+  ],
+  "types": "./dist/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
@@ -19,15 +29,10 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.0.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.9"
-  },
   "peerDependencies": {
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react-dom": ">=16.8.0",
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -40,6 +45,7 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
+    "@tailwindcss/vite": "^4.0.0",
     "vite": "^6.2.0"
   }
 }
